make sure tabs stay properly aligned to left

--- a/educator_dashboard/assets/custom.css
+++ b/educator_dashboard/assets/custom.css
@@ -135,6 +135,9 @@ body {
         display: block;
     }
     
+    .v-tabs--vertical > .v-tabs-bar > .v-slide-group__wrapper {
+        flex: 0 1 auto;
+    }
     .v-tabs--vertical>.v-tabs-bar .v-tabs-bar__content {
         flex-direction: row
     }
